<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleColab</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="local_compute_button">Local Compute</string>
    <string name="colab_compute_button">Colab Compute</string>
    <string name="generate_file_button">Generate File</string>
    <string name="result_label">Result:</string>
    <string name="time_label">Time:</string>
    <string name="progress_label">Progress:</string>
    <string name="file_size_label">File Size:</string>
    <string name="iteration_count_label">Iterations:</string>

</resources>