<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <!-- Top Area  -->
    <LinearLayout 
	    android:id="@+id/top_area"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >
    
	     <!-- Result info Area -->
	     <LinearLayout
	        android:id="@+id/result_info_area"
	        android:orientation="horizontal"
	        android:layout_weight="1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	    
			<TextView
		        android:id="@+id/result_label"
		        android:layout_width="100dp"
		        android:layout_height="40dp"
		        android:layout_margin="5dp"
		        android:textStyle="bold" 
		        android:textSize="18sp"
		        android:text="@string/result_label"/>
	        
		    <TextView
		        android:id="@+id/result"
		        android:layout_width="200dp"
		        android:layout_height="40dp"
		        android:layout_margin="5dp"
		        android:textStyle="bold" 
		      	android:background="#E0EBEB"
		        android:textSize="18sp" />
			    
		 </LinearLayout>
			
	     <!-- Time info Area -->
	     <LinearLayout
	        android:id="@+id/time_info_area"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	    
			<TextView
		        android:id="@+id/time_label"
		        android:layout_width="100dp"
		        android:layout_height="40dp"
		        android:layout_margin="5dp"
		        android:textStyle="bold" 
		        android:textSize="18sp"
		        android:text="@string/time_label"/>
	        
		    <TextView
		        android:id="@+id/time"
		        android:layout_width="200dp"
		        android:layout_height="40dp"
		        android:layout_margin="5dp"
		        android:textStyle="bold"
		        android:background="#E0EBEB"
		        android:textSize="18sp" />
			    
			</LinearLayout>
		
	     <!-- Progress info Area -->
	     <LinearLayout
	        android:id="@+id/time_info_area"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	    
			<TextView
		        android:id="@+id/progress_label"
		        android:layout_width="100dp"
		        android:layout_height="40dp"
		        android:layout_margin="5dp"
		        android:textStyle="bold" 
		        android:textSize="18sp"
		        android:text="@string/progress_label"/>
	        
		    <TextView
		        android:id="@+id/progress"
		        android:layout_width="200dp"
		        android:layout_height="40dp"
		        android:layout_margin="5dp"
		        android:textStyle="bold" 
		        android:background="#E0EBEB"
		        android:textSize="18sp" />
			    
			</LinearLayout>	
			
	     <!-- File size Area -->
	     <LinearLayout
	        android:id="@+id/file_size_area"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	    
			<TextView
		        android:id="@+id/file_size_label"
		        android:layout_width="100dp"
		        android:layout_height="40dp"
		        android:layout_margin="5dp"
		        android:textStyle="bold" 
		        android:textSize="18sp"
		        android:text="@string/file_size_label"/>
	        
		    <EditText
		        android:id="@+id/file_size"
		        android:layout_width="200dp"
		        android:layout_height="40dp"
		        android:layout_margin="5dp"
		        android:textStyle="bold" 
		        android:inputType="number"
		        android:background="#E0EBEB"
		        android:textSize="18sp" />
			    
			</LinearLayout>	
			
	     <!-- iteration count Area -->
	     <LinearLayout
	        android:id="@+id/iteration_count_area"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	    
			<TextView
		        android:id="@+id/iteration_count_label"
		        android:layout_width="100dp"
		        android:layout_height="40dp"
		        android:layout_margin="5dp"
		        android:textStyle="bold" 
		        android:textSize="18sp"
		        android:text="@string/iteration_count_label"/>
	        
		    <EditText
		        android:id="@+id/iteration_count"
		        android:layout_width="200dp"
		        android:layout_height="40dp"
		        android:layout_margin="5dp"
		        android:textStyle="bold" 
		        android:inputType="number"
		        android:background="#E0EBEB"
		        android:textSize="18sp" />
			    
			</LinearLayout>	
	     
	</LinearLayout>
		
    <!-- Button Area  -->
    <LinearLayout 
	    android:id="@+id/bottom_area"
	  	android:layout_below="@id/top_area"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp" >
    
    	<!-- Button Area -->
		<LinearLayout 
		    android:id="@+id/button_area"
		    android:layout_marginRight="1dp"
	        android:orientation="vertical"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <Button
	            android:id="@+id/local_compute_button"
	            android:layout_width="match_parent"
	            android:layout_height="50dp"
	            android:padding="10dp"
	            android:layout_margin="4dp"
	            android:gravity="center"
	            android:text="@string/local_compute_button" />
	        
	        <Button
	            android:id="@+id/colab_compute_button"
	            android:layout_width="fill_parent"
	            android:layout_height="50dp"
	            android:padding="10dp"
	            android:layout_margin="4dp"
	            android:text="@string/colab_compute_button" />
	        
	        <Button
	            android:id="@+id/generate_file_button"
	            android:layout_width="fill_parent"
	            android:layout_height="50dp"
	            android:padding="10dp"
	            android:layout_margin="4dp"
	            android:text="@string/generate_file_button" />
		</LinearLayout>

	</LinearLayout>

</RelativeLayout>